--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,12 @@
 KORUPHP_ENV=development
 # Display debug errors
 KORUPHP_DEBUG=true
-# SQLite DSN for main database
-KORUPHP_DSN=sqlite:data/app.sqlite
-# Database credentials if using MySQL etc
-KORUPHP_DB_USER=
+# MySQL DSN for main database
+KORUPHP_DSN=mysql:host=localhost;dbname=koruphp;port=3306
+# Database credentials
+KORUPHP_DB_USER=root
 KORUPHP_DB_PASS=
 # Token secrets
 KORUPHP_TOKEN=secret
-KORUPHP_GOOGLE_TOKEN=test-google-token
+# Google OAuth client ID for login button
+KORUPHP_GOOGLE_CLIENT_ID=
