--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "project",
   "license": "MIT",
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.1",
+    "twig/twig": "^3.0"
   },
   "autoload": {
     "psr-4": {
