--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
   "type": "project",
   "license": "MIT",
   "require": {
-    "php": ">=8.1",
-    "twig/twig": "^3.0"
+    "php": ">=8.1"
   },
   "autoload": {
     "psr-4": {
